package com.roy.promotion.dto;

/**
 * @ClassName ActivityInfoDTO
 * @Author roy
 * @Date 2023/10/4 11:06 PM
 * @Version v1.0
 **/
public class ActivityInfoDTO {

    private long id;

    private String name;

    private long startTime;

    private long endTime;

    private long activityTemplateId;


}
