package com.roy.promotion.dto;

import java.util.List;

/**
 * @ClassName ActivityRuleDTO
 * @Author roy
 * @Date 2023/10/7 11:22 AM
 * @Version v1.0
 **/
public class ActivityRuleDTO {
    private long id;

    private String ruleName;

    private List<ActivityMetaDTO> metaList;

}
