package com.roy.promotion.dto;

/**
 * @ClassName ActivityTemplateDTO
 * @Author roy
 * @Date 2023/10/7 11:21 AM
 * @Version v1.0
 **/
public class ActivityTemplateDTO {

    private long id;

    private String templateName;
    private boolean hasRules;

    private boolean multiRules;
    private long ruleId;



}
