package com.roy.promotion.enums;

public enum MetaTypeEnum {

    CONDITION, ACTION;

}
